--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -3,7 +3,7 @@
   color: #fff;
   font-size: 1.3rem;
   &:hover {
-    color: #3a748c;
+    color: #df3b57;
     transition: ease-in-out 400ms;
   }
 }
